Refactor constructor formatting and improve code consistency across mail classes and related files

--- a/composer.json
+++ b/composer.json
@@ -31,12 +31,12 @@
     },
     "autoload": {
         "psr-4": {
-            "Imagjino\\Pos\\": ""
+            "Imagjino\\POS\\": ""
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Imagjino\\Pos\\Tests\\": "tests"
+            "Imagjino\\POS\\Tests\\": "tests"
         }
     },
     "scripts": {
